feat: enable selecting mint for all relevant methods

--- a/libs/solana/tsconfig.lib.json
+++ b/libs/solana/tsconfig.lib.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["es2020.promise", "es2018.promise"]
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
