feat: implement admin-ui-address and admin-ui-identicon components

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,8 +28,10 @@
       "@kin-kinetic/admin/shell/feature": ["libs/admin/shell/feature/src/index.ts"],
       "@kin-kinetic/admin/system/feature": ["libs/admin/system/feature/src/index.ts"],
       "@kin-kinetic/admin/system/ui": ["libs/admin/system/ui/src/index.ts"],
+      "@kin-kinetic/admin/ui/address": ["libs/admin/ui/address/src/index.ts"],
       "@kin-kinetic/admin/ui/alert": ["libs/admin/ui/alert/src/index.ts"],
       "@kin-kinetic/admin/ui/form": ["libs/admin/ui/form/src/index.ts"],
+      "@kin-kinetic/admin/ui/identicon": ["libs/admin/ui/identicon/src/index.ts"],
       "@kin-kinetic/admin/ui/layout": ["libs/admin/ui/layout/src/index.ts"],
       "@kin-kinetic/admin/ui/loader": ["libs/admin/ui/loader/src/index.ts"],
       "@kin-kinetic/admin/ui/tabs": ["libs/admin/ui/tabs/src/index.ts"],
