--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "bignumber": "^1.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "color": "^4.2.3",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.22.7",
     "create-hmac": "^1.1.7",
@@ -106,6 +107,8 @@
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^7.5.5",
     "swagger-ui-express": "^4.4.0",
+    "text-encoding": "^0.7.0",
+    "ts-md5": "^1.2.11",
     "tslib": "^2.4.0",
     "urql": "^2.2.0",
     "yup": "^0.32.11"
@@ -147,6 +150,7 @@
     "@testing-library/react-hooks": "8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
+    "@types/color": "^3.0.3",
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
     "@types/jest": "27.4.1",
@@ -155,6 +159,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
+    "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
     "@typescript-eslint/eslint-plugin": "5.26.0",
     "@typescript-eslint/parser": "5.26.0",
