chore: remove prisma-erd-generator

--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "format:write": "nx format:write",
     "prepare": "husky install",
     "start": "yarn prisma db push && node dist/apps/api/main.js",
-    "structure": "open libs/api/core/data-access/src/prisma/prisma-structure.svg",
     "test": "nx test && yarn test:admin-e2e && yarn test:sdk-e2e",
-    "test:admin-e2e:watch": "nx run admin-e2e:e2e --headed --watch",
     "test:admin-e2e": "nx run admin-e2e:e2e",
-    "test:api-e2e:watch": "nx run api-e2e:e2e --verbose --watch",
+    "test:admin-e2e:watch": "nx run admin-e2e:e2e --headed --watch",
     "test:api-e2e": "nx run api-e2e:e2e",
-    "test:sdk-e2e:watch": "nx run sdk-e2e:e2e --verbose --watch",
-    "test:sdk-e2e": "nx run sdk-e2e:e2e"
+    "test:api-e2e:watch": "nx run api-e2e:e2e --verbose --watch",
+    "test:sdk-e2e": "nx run sdk-e2e:e2e",
+    "test:sdk-e2e:watch": "nx run sdk-e2e:e2e --verbose --watch"
   },
   "private": true,
   "dependencies": {
@@ -125,7 +124,6 @@
     "@graphql-codegen/typescript-document-nodes": "^2.2.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "@graphql-codegen/typescript-urql": "^3.5.10",
-    "@mermaid-js/mermaid-cli": "^9.1.2",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.5",
     "@nrwl/cli": "14.1.9",
@@ -180,7 +178,6 @@
     "nodemon": "^2.0.16",
     "nx": "14.1.9",
     "prettier": "^2.6.2",
-    "prisma-erd-generator": "^0.11.4",
     "prisma": "^3.14.0",
     "react-test-renderer": "18.1.0",
     "stream-browserify": "^3.0.0",
