--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/system": "^2.1.3",
     "@chakra-ui/theme": "^2.1.0",
     "@chakra-ui/theme-tools": "^2.0.2",
     "@choc-ui/chakra-autocomplete": "^4.22.0",
@@ -49,7 +50,7 @@
     "@nestjs/apollo": "^10.0.16",
     "@nestjs/axios": "^0.0.8",
     "@nestjs/common": "^8.4.7",
-    "@nestjs/config": "^2.0.1",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.7",
     "@nestjs/graphql": "^10.0.16",
     "@nestjs/jwt": "^8.0.1",
@@ -62,13 +63,13 @@
     "@opentelemetry/core": "^1.3.1",
     "@opentelemetry/exporter-prometheus": "^0.27.0",
     "@opentelemetry/sdk-node": "^0.27.0",
-    "@prisma/client": "^3.14.0",
-    "@scure/bip39": "^1.0.0",
+    "@prisma/client": "^4.0.0",
+    "@scure/bip39": "^1.1.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
-    "@solana/spl-token-registry": "^0.2.4154",
-    "@solana/web3.js": "^1.43.2",
-    "apollo-server-express": "^3.8.1",
+    "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/web3.js": "^1.44.3",
+    "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bignumber": "^1.1.0",
@@ -76,7 +77,7 @@
     "class-validator": "^0.13.2",
     "color": "^4.2.3",
     "cookie-parser": "^1.4.6",
-    "core-js": "^3.22.7",
+    "core-js": "^3.23.3",
     "create-hmac": "^1.1.7",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
@@ -120,7 +121,7 @@
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/fragment-matcher": "^3.2.1",
     "@graphql-codegen/introspection": "^2.1.1",
-    "@graphql-codegen/typescript": "^2.4.11",
+    "@graphql-codegen/typescript": "^2.5.1",
     "@graphql-codegen/typescript-document-nodes": "^2.2.13",
     "@graphql-codegen/typescript-operations": "^2.4.2",
     "@graphql-codegen/typescript-urql": "^3.5.12",
@@ -142,11 +143,10 @@
     "@nrwl/workspace": "14.3.6",
     "@openapitools/openapi-generator-cli": "^2.5.1",
     "@opentelemetry/api-metrics": "^0.27.0",
-    "@swc-node/register": "^1.4.2",
+    "@swc-node/register": "^1.5.1",
     "@swc/core": "^1.2.207",
-    "@swc/helpers": "^0.3.16",
+    "@swc/helpers": "^0.4.3",
     "@testing-library/react": "13.3.0",
-    "@testing-library/react-hooks": "8.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/color": "^3.0.3",
@@ -154,40 +154,40 @@
     "@types/cron": "^2.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "18.0.0",
-    "@types/react": "18.0.13",
+    "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
+    "@typescript-eslint/eslint-plugin": "5.26.0",
+    "@typescript-eslint/parser": "5.26.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.5",
     "cypress": "^9.7.0",
-    "eslint": "8.15.0",
+    "eslint": "8.18.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "fake-indexeddb": "^3.1.8",
     "husky": "^8.0.1",
     "jest": "27.5.1",
-    "lint-staged": "^12.4.3",
+    "lint-staged": "^13.0.3",
     "nodemon": "^2.0.18",
     "nx": "14.3.6",
     "prettier": "2.7.1",
-    "prisma": "^3.14.0",
+    "prisma": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.3",
     "ts-jest": "27.1.4",
-    "ts-morph": "^15.0.0",
+    "ts-morph": "^15.1.0",
     "ts-node": "10.8.1",
     "typescript": "4.7.4",
-    "webpack": "5.72.1"
+    "webpack": "5.73.0"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
