--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@choc-ui/chakra-autocomplete": "^4.22.0",
     "@choc-ui/paginator": "^3.4.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
     "@heroicons/react": "^1.0.6",
     "@kin-tools/kin-memo": "^1.5.0",
     "@kin-tools/kin-transaction": "^1.5.0",
@@ -96,8 +96,8 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-router-dom": "^6.3.0",
     "redirect-ssl": "^3.0.0",
@@ -126,22 +126,23 @@
     "@graphql-codegen/typescript-urql": "^3.5.10",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.5",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/devkit": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/js": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/nest": "14.1.9",
-    "@nrwl/node": "14.1.9",
-    "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/nx-plugin": "14.1.9",
-    "@nrwl/react": "14.1.9",
-    "@nrwl/web": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
+    "@nrwl/cli": "14.3.6",
+    "@nrwl/cypress": "14.3.6",
+    "@nrwl/devkit": "14.3.6",
+    "@nrwl/eslint-plugin-nx": "14.3.6",
+    "@nrwl/jest": "14.3.6",
+    "@nrwl/js": "14.3.6",
+    "@nrwl/linter": "14.3.6",
+    "@nrwl/nest": "14.3.6",
+    "@nrwl/node": "14.3.6",
+    "@nrwl/nx-cloud": "14.1.3",
+    "@nrwl/nx-plugin": "14.3.6",
+    "@nrwl/react": "14.3.6",
+    "@nrwl/web": "14.3.6",
+    "@nrwl/workspace": "14.3.6",
     "@openapitools/openapi-generator-cli": "^2.5.1",
     "@opentelemetry/api-metrics": "^0.27.0",
+    "@swc-node/register": "^1.4.2",
     "@swc/core": "^1.2.194",
     "@swc/helpers": "^0.3.16",
     "@testing-library/react": "13.3.0",
@@ -152,39 +153,39 @@
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
     "@types/jest": "27.4.1",
-    "@types/node": "17.0.36",
-    "@types/react": "18.0.12",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.13",
     "@types/react-dom": "18.0.5",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.26.0",
-    "@typescript-eslint/parser": "5.26.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.5",
     "cypress": "^9.7.0",
-    "eslint": "8.16.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.30.0",
-    "eslint-plugin-react-hooks": "4.5.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "fake-indexeddb": "^3.1.7",
     "husky": "^8.0.1",
     "jest": "27.5.1",
     "lint-staged": "^12.4.3",
     "nodemon": "^2.0.16",
-    "nx": "14.1.9",
-    "prettier": "^2.6.2",
+    "nx": "14.3.6",
+    "prettier": "2.7.1",
     "prisma": "^3.14.0",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.3",
     "ts-jest": "27.1.4",
     "ts-morph": "^15.0.0",
-    "ts-node": "^10.8.0",
-    "typescript": "~4.7.2",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.4",
     "webpack": "5.72.1"
   },
   "lint-staged": {
