--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-final-form": "^6.5.9",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "^6.3.0",
     "redirect-ssl": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
@@ -155,7 +155,6 @@
     "@types/node": "17.0.36",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
-    "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
