fix: switch sdk-e2e jest config to js

--- a/apps/sdk-e2e/project.json
+++ b/apps/sdk-e2e/project.json
@@ -14,7 +14,7 @@
       "executor": "@kin-kinetic-dev/jest:build",
       "options": {
         "devServerTarget": "sdk-e2e:serve-api",
-        "jestConfig": "apps/sdk-e2e/jest.config.ts",
+        "jestConfig": "apps/sdk-e2e/jest.config.js",
         "passWithNoTests": true
       }
     },
