--- a/apps/sdk-e2e/project.json
+++ b/apps/sdk-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/sdk-e2e/src",
   "projectType": "application",
   "targets": {
@@ -13,7 +14,7 @@
       "executor": "@kin-kinetic-dev/jest:build",
       "options": {
         "devServerTarget": "sdk-e2e:serve-api",
-        "jestConfig": "apps/sdk-e2e/jest.config.ts",
+        "jestConfig": "apps/sdk-e2e/jest.config.js",
         "passWithNoTests": true
       }
     },
