--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,74 +10,204 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@kin-kinetic-dev/jest": ["libs/dev/jest/src/index.ts"],
-      "@kin-kinetic/admin/app/data-access": ["libs/admin/app/data-access/src/index.ts"],
-      "@kin-kinetic/admin/app/feature": ["libs/admin/app/feature/src/index.ts"],
-      "@kin-kinetic/admin/app/ui": ["libs/admin/app/ui/src/index.ts"],
-      "@kin-kinetic/admin/auth/data-access": ["libs/admin/auth/data-access/src/index.ts"],
-      "@kin-kinetic/admin/auth/feature": ["libs/admin/auth/feature/src/index.ts"],
-      "@kin-kinetic/admin/auth/ui": ["libs/admin/auth/ui/src/index.ts"],
-      "@kin-kinetic/admin/cluster/feature": ["libs/admin/cluster/feature/src/index.ts"],
-      "@kin-kinetic/admin/cluster/ui": ["libs/admin/cluster/ui/src/index.ts"],
-      "@kin-kinetic/admin/shell/feature": ["libs/admin/shell/feature/src/index.ts"],
-      "@kin-kinetic/admin/system/feature": ["libs/admin/system/feature/src/index.ts"],
-      "@kin-kinetic/admin/system/ui": ["libs/admin/system/ui/src/index.ts"],
-      "@kin-kinetic/admin/ui/address": ["libs/admin/ui/address/src/index.ts"],
-      "@kin-kinetic/admin/ui/alert": ["libs/admin/ui/alert/src/index.ts"],
-      "@kin-kinetic/admin/ui/form": ["libs/admin/ui/form/src/index.ts"],
-      "@kin-kinetic/admin/ui/identicon": ["libs/admin/ui/identicon/src/index.ts"],
-      "@kin-kinetic/admin/ui/layout": ["libs/admin/ui/layout/src/index.ts"],
-      "@kin-kinetic/admin/ui/loader": ["libs/admin/ui/loader/src/index.ts"],
-      "@kin-kinetic/admin/ui/tabs": ["libs/admin/ui/tabs/src/index.ts"],
-      "@kin-kinetic/admin/user/feature": ["libs/admin/user/feature/src/index.ts"],
-      "@kin-kinetic/admin/user/ui": ["libs/admin/user/ui/src/index.ts"],
-      "@kin-kinetic/admin/wallet/feature": ["libs/admin/wallet/feature/src/index.ts"],
-      "@kin-kinetic/admin/wallet/ui": ["libs/admin/wallet/ui/src/index.ts"],
-      "@kin-kinetic/airdrop": ["libs/airdrop/src/index.ts"],
-      "@kin-kinetic/api-app-module": ["apps/api/src/app/app.module.ts"],
-      "@kin-kinetic/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
-      "@kin-kinetic/api/account/feature": ["libs/api/account/feature/src/index.ts"],
-      "@kin-kinetic/api/airdrop/data-access": ["libs/api/airdrop/data-access/src/index.ts"],
-      "@kin-kinetic/api/airdrop/feature": ["libs/api/airdrop/feature/src/index.ts"],
-      "@kin-kinetic/api/app/data-access": ["libs/api/app/data-access/src/index.ts"],
-      "@kin-kinetic/api/app/feature": ["libs/api/app/feature/src/index.ts"],
-      "@kin-kinetic/api/auth/data-access": ["libs/api/auth/data-access/src/index.ts"],
-      "@kin-kinetic/api/auth/feature": ["libs/api/auth/feature/src/index.ts"],
-      "@kin-kinetic/api/auth/util": ["libs/api/auth/util/src/index.ts"],
-      "@kin-kinetic/api/cluster/data-access": ["libs/api/cluster/data-access/src/index.ts"],
-      "@kin-kinetic/api/cluster/feature": ["libs/api/cluster/feature/src/index.ts"],
-      "@kin-kinetic/api/cluster/util": ["libs/api/cluster/util/src/index.ts"],
-      "@kin-kinetic/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
-      "@kin-kinetic/api/config/feature": ["libs/api/config/feature/src/index.ts"],
-      "@kin-kinetic/api/core/data-access": ["libs/api/core/data-access/src/index.ts"],
-      "@kin-kinetic/api/core/feature": ["libs/api/core/feature/src/index.ts"],
-      "@kin-kinetic/api/core/util": ["libs/api/core/util/src/index.ts"],
-      "@kin-kinetic/api/transaction/data-access": ["libs/api/transaction/data-access/src/index.ts"],
-      "@kin-kinetic/api/transaction/feature": ["libs/api/transaction/feature/src/index.ts"],
-      "@kin-kinetic/api/user/data-access": ["libs/api/user/data-access/src/index.ts"],
-      "@kin-kinetic/api/user/feature": ["libs/api/user/feature/src/index.ts"],
-      "@kin-kinetic/api/wallet/data-access": ["libs/api/wallet/data-access/src/index.ts"],
-      "@kin-kinetic/api/wallet/feature": ["libs/api/wallet/feature/src/index.ts"],
-      "@kin-kinetic/demo/home/feature": ["libs/demo/home/feature/src/index.ts"],
-      "@kin-kinetic/demo/keypair/data-access": ["libs/demo/keypair/data-access/src/index.ts"],
-      "@kin-kinetic/demo/keypair/feature": ["libs/demo/keypair/feature/src/index.ts"],
-      "@kin-kinetic/demo/keypair/ui": ["libs/demo/keypair/ui/src/index.ts"],
-      "@kin-kinetic/demo/sdk/feature": ["libs/demo/sdk/feature/src/index.ts"],
-      "@kin-kinetic/demo/sdk/ui": ["libs/demo/sdk/ui/src/index.ts"],
-      "@kin-kinetic/demo/server/data-access": ["libs/demo/server/data-access/src/index.ts"],
-      "@kin-kinetic/demo/server/feature": ["libs/demo/server/feature/src/index.ts"],
-      "@kin-kinetic/demo/server/ui": ["libs/demo/server/ui/src/index.ts"],
-      "@kin-kinetic/demo/shell/feature": ["libs/demo/shell/feature/src/index.ts"],
-      "@kin-kinetic/keypair": ["libs/keypair/src/index.ts"],
-      "@kin-kinetic/sdk": ["libs/sdk/src/index.ts"],
-      "@kin-kinetic/shared/util/admin-sdk": ["libs/shared/util/admin-sdk/src/index.ts"],
-      "@kin-kinetic/solana": ["libs/solana/src/index.ts"]
+      "@kin-kinetic-dev/jest": [
+        "libs/dev/jest/src/index.ts"
+      ],
+      "@kin-kinetic/admin/app/data-access": [
+        "libs/admin/app/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/admin/app/feature": [
+        "libs/admin/app/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/app/ui": [
+        "libs/admin/app/ui/src/index.ts"
+      ],
+      "@kin-kinetic/admin/auth/data-access": [
+        "libs/admin/auth/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/admin/auth/feature": [
+        "libs/admin/auth/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/auth/ui": [
+        "libs/admin/auth/ui/src/index.ts"
+      ],
+      "@kin-kinetic/admin/cluster/feature": [
+        "libs/admin/cluster/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/cluster/ui": [
+        "libs/admin/cluster/ui/src/index.ts"
+      ],
+      "@kin-kinetic/admin/shell/feature": [
+        "libs/admin/shell/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/system/feature": [
+        "libs/admin/system/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/system/ui": [
+        "libs/admin/system/ui/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/address": [
+        "libs/admin/ui/address/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/alert": [
+        "libs/admin/ui/alert/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/form": [
+        "libs/admin/ui/form/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/identicon": [
+        "libs/admin/ui/identicon/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/layout": [
+        "libs/admin/ui/layout/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/loader": [
+        "libs/admin/ui/loader/src/index.ts"
+      ],
+      "@kin-kinetic/admin/ui/tabs": [
+        "libs/admin/ui/tabs/src/index.ts"
+      ],
+      "@kin-kinetic/admin/user/feature": [
+        "libs/admin/user/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/user/ui": [
+        "libs/admin/user/ui/src/index.ts"
+      ],
+      "@kin-kinetic/admin/wallet/feature": [
+        "libs/admin/wallet/feature/src/index.ts"
+      ],
+      "@kin-kinetic/admin/wallet/ui": [
+        "libs/admin/wallet/ui/src/index.ts"
+      ],
+      "@kin-kinetic/airdrop": [
+        "libs/airdrop/src/index.ts"
+      ],
+      "@kin-kinetic/api-app-module": [
+        "apps/api/src/app/app.module.ts"
+      ],
+      "@kin-kinetic/api/account/data-access": [
+        "libs/api/account/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/account/feature": [
+        "libs/api/account/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/airdrop/data-access": [
+        "libs/api/airdrop/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/airdrop/feature": [
+        "libs/api/airdrop/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/app/data-access": [
+        "libs/api/app/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/app/feature": [
+        "libs/api/app/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/auth/data-access": [
+        "libs/api/auth/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/auth/feature": [
+        "libs/api/auth/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/auth/util": [
+        "libs/api/auth/util/src/index.ts"
+      ],
+      "@kin-kinetic/api/cluster/data-access": [
+        "libs/api/cluster/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/cluster/feature": [
+        "libs/api/cluster/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/cluster/util": [
+        "libs/api/cluster/util/src/index.ts"
+      ],
+      "@kin-kinetic/api/config/data-access": [
+        "libs/api/config/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/config/feature": [
+        "libs/api/config/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/core/data-access": [
+        "libs/api/core/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/core/feature": [
+        "libs/api/core/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/core/util": [
+        "libs/api/core/util/src/index.ts"
+      ],
+      "@kin-kinetic/api/transaction/data-access": [
+        "libs/api/transaction/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/transaction/feature": [
+        "libs/api/transaction/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/user/data-access": [
+        "libs/api/user/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/user/feature": [
+        "libs/api/user/feature/src/index.ts"
+      ],
+      "@kin-kinetic/api/wallet/data-access": [
+        "libs/api/wallet/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/api/wallet/feature": [
+        "libs/api/wallet/feature/src/index.ts"
+      ],
+      "@kin-kinetic/demo/home/feature": [
+        "libs/demo/home/feature/src/index.ts"
+      ],
+      "@kin-kinetic/demo/keypair/data-access": [
+        "libs/demo/keypair/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/demo/keypair/feature": [
+        "libs/demo/keypair/feature/src/index.ts"
+      ],
+      "@kin-kinetic/demo/keypair/ui": [
+        "libs/demo/keypair/ui/src/index.ts"
+      ],
+      "@kin-kinetic/demo/sdk/feature": [
+        "libs/demo/sdk/feature/src/index.ts"
+      ],
+      "@kin-kinetic/demo/sdk/ui": [
+        "libs/demo/sdk/ui/src/index.ts"
+      ],
+      "@kin-kinetic/demo/server/data-access": [
+        "libs/demo/server/data-access/src/index.ts"
+      ],
+      "@kin-kinetic/demo/server/feature": [
+        "libs/demo/server/feature/src/index.ts"
+      ],
+      "@kin-kinetic/demo/server/ui": [
+        "libs/demo/server/ui/src/index.ts"
+      ],
+      "@kin-kinetic/demo/shell/feature": [
+        "libs/demo/shell/feature/src/index.ts"
+      ],
+      "@kin-kinetic/keypair": [
+        "libs/keypair/src/index.ts"
+      ],
+      "@kin-kinetic/sdk": [
+        "libs/sdk/src/index.ts"
+      ],
+      "@kin-kinetic/shared/util/admin-sdk": [
+        "libs/shared/util/admin-sdk/src/index.ts"
+      ],
+      "@kin-kinetic/solana": [
+        "libs/solana/src/index.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
