--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ ADMIN_PASSWORD="Kinetic@admin1"
 # Provision more apps by providing the byte array of the fee payer and name
 APP_1_FEE_PAYER_BYTE_ARRAY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 APP_1_NAME="App 1"
-COOKIE_DOMAIN="localhost"
+COOKIE_DOMAINS="localhost,local.kinetic.kin.org,pages.dev"
 #COOKIE_NAME="__session"
 CORS_ORIGINS=http://localhost:4200
 #METRICS_ENABLED=true
