feat: add env var to enable metrics endpoint

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ COOKIE_DOMAINS="localhost,local.kinetic.kin.org,pages.dev"
 #COOKIE_NAME="__session"
 CORS_ORIGINS=http://localhost:4200
 #METRICS_ENABLED=true
+#METRICS_ENDPOINT_ENABLED=true
 #METRICS_PORT=9001
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 JWT_SECRET="KineticJwtSecret!"
