--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test:api-e2e": "nx run api-e2e:e2e",
     "test:api-e2e:watch": "nx run api-e2e:e2e --verbose --watch",
     "test:sdk-e2e": "nx run sdk-e2e:e2e",
-    "test:sdk-e2e:watch": "nx run sdk-e2e:e2e --verbose --watch"
+    "test:sdk-e2e:watch": "nx run sdk-e2e:e2e --verbose --watch",
+    "update-version": "node tools/update-version.js"
   },
   "private": true,
   "resolutions": {
