feat: add option to provision mints per cluster

--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,20 @@ CORS_ORIGINS=http://localhost:4200
 #METRICS_PORT=9001
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 JWT_SECRET="KineticJwtSecret!"
-#DEFAULT_MINT_AIRDROP_AMOUNT=1000
-#DEFAULT_MINT_AIRDROP_MAX=50000
-DEFAULT_MINT_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
-DEFAULT_MINT_DECIMALS=5
-DEFAULT_MINT_PUBLIC_KEY=MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek
 HOST=127.0.0.1
 PORT=3000
-SOLANA_DEVNET_RPC_ENDPOINT=http://localhost:8899
+# SolanaLocal
+SOLANA_LOCAL_ENABLED=true
+#SOLANA_LOCAL_MINT_KIN=*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin
+SOLANA_LOCAL_MINT_KIN_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
+#SOLANA_LOCAL_RPC_ENDPOINT=http://localhost:8899
+# SolanaDevnet
+SOLANA_DEVNET_ENABLED=true
+#SOLANA_DEVNET_RPC_ENDPOINT=http://localhost:8899
+#SOLANA_DEVNET_MINT_KIN=*KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX,5,Kin
+#SOLANA_DEVNET_MINT_KIN_AIRDROP_AMOUNT=1000
+#SOLANA_DEVNET_MINT_KIN_AIRDROP_MAX=50000
+SOLANA_DEVNET_MINT_KIN_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
+# SolanaMainnet
 #SOLANA_MAINNET_RPC_ENDPOINT=mainnet
+SOLANA_MAINNET_ENABLED=false
