--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -63,6 +63,8 @@
       "@kin-kinetic/api/user/feature": ["libs/api/user/feature/src/index.ts"],
       "@kin-kinetic/api/wallet/data-access": ["libs/api/wallet/data-access/src/index.ts"],
       "@kin-kinetic/api/wallet/feature": ["libs/api/wallet/feature/src/index.ts"],
+      "@kin-kinetic/api/webhook/data-access": ["libs/api/webhook/data-access/src/index.ts"],
+      "@kin-kinetic/api/webhook/feature": ["libs/api/webhook/feature/src/index.ts"],
       "@kin-kinetic/demo/home/feature": ["libs/demo/home/feature/src/index.ts"],
       "@kin-kinetic/demo/keypair/data-access": ["libs/demo/keypair/data-access/src/index.ts"],
       "@kin-kinetic/demo/keypair/feature": ["libs/demo/keypair/feature/src/index.ts"],
