--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@choc-ui/chakra-autocomplete": "^4.22.0",
     "@choc-ui/paginator": "^3.4.0",
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
     "@heroicons/react": "^1.0.6",
     "@kin-tools/kin-memo": "^1.5.0",
     "@kin-tools/kin-transaction": "^1.5.0",
     "@nestjs/apollo": "^10.0.13",
     "@nestjs/axios": "^0.0.8",
-    "@nestjs/common": "^8.4.5",
+    "@nestjs/common": "9.0.11",
     "@nestjs/config": "^2.0.1",
-    "@nestjs/core": "^8.4.5",
+    "@nestjs/core": "9.0.11",
     "@nestjs/graphql": "^10.0.13",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/platform-express": "9.0.11",
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/swagger": "6.1.2",
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/core": "^1.0.1",
     "@opentelemetry/exporter-prometheus": "^0.27.0",
@@ -128,22 +128,22 @@
     "@graphql-codegen/typescript-document-nodes": "^2.2.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "@graphql-codegen/typescript-urql": "^3.5.10",
-    "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.5",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/cypress": "14.4.3",
-    "@nrwl/devkit": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/js": "14.4.3",
-    "@nrwl/linter": "14.4.3",
-    "@nrwl/nest": "14.4.3",
-    "@nrwl/node": "14.4.3",
-    "@nrwl/nx-cloud": "14.2.0",
-    "@nrwl/nx-plugin": "14.4.3",
-    "@nrwl/react": "14.4.3",
-    "@nrwl/web": "14.4.3",
-    "@nrwl/workspace": "14.4.3",
+    "@nestjs/schematics": "9.0.3",
+    "@nestjs/testing": "9.0.11",
+    "@nrwl/cli": "14.6.5",
+    "@nrwl/cypress": "14.6.5",
+    "@nrwl/devkit": "14.6.5",
+    "@nrwl/eslint-plugin-nx": "14.6.5",
+    "@nrwl/jest": "14.6.5",
+    "@nrwl/js": "14.6.5",
+    "@nrwl/linter": "14.6.5",
+    "@nrwl/nest": "14.6.5",
+    "@nrwl/node": "14.6.5",
+    "@nrwl/nx-cloud": "14.6.2",
+    "@nrwl/nx-plugin": "14.6.5",
+    "@nrwl/react": "14.6.5",
+    "@nrwl/web": "14.6.5",
+    "@nrwl/workspace": "14.6.5",
     "@openapitools/openapi-generator-cli": "^2.5.1",
     "@opentelemetry/api-metrics": "^0.27.0",
     "@swc-node/register": "^1.4.2",
@@ -156,40 +156,41 @@
     "@types/color": "^3.0.3",
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
     "@types/react-dom": "18.0.5",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
-    "babel-jest": "27.5.1",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
+    "babel-jest": "28.1.3",
     "babel-loader": "8.2.5",
     "cypress": "^9.7.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "fake-indexeddb": "^3.1.7",
     "husky": "^8.0.1",
-    "jest": "27.5.1",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^12.4.3",
     "nodemon": "^2.0.16",
-    "nx": "14.4.3",
+    "nx": "14.6.5",
     "prettier": "2.7.1",
     "prisma": "^3.14.0",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.3",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.8",
     "ts-morph": "^15.0.0",
-    "ts-node": "10.8.1",
+    "ts-node": "10.9.1",
     "typescript": "4.7.4",
     "webpack": "5.72.1"
   },
