--- a/package.json
+++ b/package.json
@@ -39,17 +39,19 @@
     "@solana/web3.js": "1.54.0"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@chakra-ui/theme": "^2.1.0",
-    "@chakra-ui/theme-tools": "^2.0.2",
-    "@choc-ui/chakra-autocomplete": "^4.22.0",
+    "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/react": "^2.3.2",
+    "@chakra-ui/styled-system": "^2.3.1",
+    "@chakra-ui/system": "^2.2.9",
+    "@chakra-ui/theme": "^2.1.11",
+    "@chakra-ui/theme-tools": "^2.0.11",
+    "@choc-ui/chakra-autocomplete": "^5.1.1",
     "@choc-ui/paginator": "^3.4.0",
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
-    "@heroicons/react": "^1.0.6",
-    "@kin-tools/kin-memo": "^1.5.0",
-    "@kin-tools/kin-transaction": "^1.5.0",
+    "@heroicons/react": "^2.0.10",
+    "@kin-tools/kin-memo": "^1.7.1",
+    "@kin-tools/kin-transaction": "^1.7.1",
     "@nestjs/apollo": "^10.1.0",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "9.0.11",
@@ -113,21 +115,21 @@
     "text-encoding": "^0.7.0",
     "ts-md5": "^1.2.11",
     "tslib": "^2.4.0",
-    "urql": "^2.2.0",
+    "urql": "^3.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "7.18.2",
     "@cypress/code-coverage": "^3.10.0",
-    "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/fragment-matcher": "^3.2.1",
-    "@graphql-codegen/introspection": "^2.1.1",
-    "@graphql-codegen/typescript": "^2.4.11",
-    "@graphql-codegen/typescript-document-nodes": "^2.2.11",
-    "@graphql-codegen/typescript-operations": "^2.4.0",
-    "@graphql-codegen/typescript-urql": "^3.5.10",
+    "@graphql-codegen/add": "^3.2.1",
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/fragment-matcher": "^3.3.1",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-urql": "^3.7.0",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.0.11",
     "@nrwl/cli": "14.6.5",
@@ -179,16 +181,16 @@
     "husky": "^8.0.1",
     "jest": "28.1.3",
     "jest-environment-jsdom": "^29.0.2",
-    "lint-staged": "^12.4.3",
+    "lint-staged": "^13.0.3",
     "nodemon": "^2.0.16",
     "nx": "14.6.5",
     "prettier": "2.7.1",
     "prisma": "^3.14.0",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
-    "supertest": "6.2.3",
+    "supertest": "6.2.4",
     "ts-jest": "28.0.8",
-    "ts-morph": "^15.0.0",
+    "ts-morph": "^16.0.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4",
     "webpack": "5.72.1"
