--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
     "color": "^4.2.3",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.25.1",
-    "create-hmac": "^1.1.7",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
+    "ed25519-hd-key": "^1.3.0",
     "express": "^4.18.1",
     "final-form": "^4.20.7",
     "framer-motion": "^6.3.10",
