chore: move airdrop logic from separate package to api/airdrop/util

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,12 +38,12 @@
       "@kin-kinetic/admin/user/ui": ["libs/admin/user/ui/src/index.ts"],
       "@kin-kinetic/admin/wallet/feature": ["libs/admin/wallet/feature/src/index.ts"],
       "@kin-kinetic/admin/wallet/ui": ["libs/admin/wallet/ui/src/index.ts"],
-      "@kin-kinetic/airdrop": ["libs/airdrop/src/index.ts"],
       "@kin-kinetic/api-app-module": ["apps/api/src/app/app.module.ts"],
       "@kin-kinetic/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
       "@kin-kinetic/api/account/feature": ["libs/api/account/feature/src/index.ts"],
       "@kin-kinetic/api/airdrop/data-access": ["libs/api/airdrop/data-access/src/index.ts"],
       "@kin-kinetic/api/airdrop/feature": ["libs/api/airdrop/feature/src/index.ts"],
+      "@kin-kinetic/api/airdrop/util": ["libs/api/airdrop/util/src/index.ts"],
       "@kin-kinetic/api/app/data-access": ["libs/api/app/data-access/src/index.ts"],
       "@kin-kinetic/api/app/feature": ["libs/api/app/feature/src/index.ts"],
       "@kin-kinetic/api/auth/data-access": ["libs/api/auth/data-access/src/index.ts"],
