feat: implement logger that allows more find-grained control

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 JWT_SECRET="KineticJwtSecret!"
 HOST=127.0.0.1
 PORT=3000
+# Configure the logger https://ogma.jaymcdoniel.dev/
+#LOG_COLOR=true
+# ALL = 0, SILLY = 0, FINE = 1, VERBOSE = 1, DEBUG = 2, INFO = 3, LOG = 3, WARN = 4, ERROR = 5, FATAL = 6, OFF = 7
+LOG_LEVEL=ALL
 # SolanaLocal
 SOLANA_LOCAL_ENABLED=true
 #SOLANA_LOCAL_MINT_KIN=*MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek,5,Kin
