--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "6.1.2",
+    "@ogma/common": "^1.1.0",
+    "@ogma/logger": "^2.3.0",
+    "@ogma/nestjs-module": "^4.0.1",
+    "@ogma/styler": "^1.0.0",
     "@opentelemetry/api": "^1.2.0",
     "@opentelemetry/core": "^1.6.0",
     "@opentelemetry/exporter-prometheus": "^0.32.0",
@@ -122,6 +126,7 @@
     "@babel/core": "^7.19.0",
     "@babel/preset-env": "7.19.0",
     "@cypress/code-coverage": "^3.10.0",
+    "@golevelup/nestjs-modules": "^0.6.1",
     "@graphql-codegen/add": "^3.2.1",
     "@graphql-codegen/cli": "^2.12.0",
     "@graphql-codegen/fragment-matcher": "^3.3.1",
