feat: add option to log to json

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ HOST=127.0.0.1
 PORT=3000
 # Configure the logger https://ogma.jaymcdoniel.dev/
 #LOG_COLOR=true
+#LOG_JSON=false
 # ALL = 0, SILLY = 0, FINE = 1, VERBOSE = 1, DEBUG = 2, INFO = 3, LOG = 3, WARN = 4, ERROR = 5, FATAL = 6, OFF = 7
 LOG_LEVEL=ALL
 # SolanaLocal
