--- a/libs/keypair/project.json
+++ b/libs/keypair/project.json
@@ -6,7 +6,8 @@
     "build": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "commands": ["nx run keypair:update-version", "nx run keypair:build-lib"]
+        "commands": ["nx run keypair:update-version", "nx run keypair:build-lib"],
+        "outputPath": "dist/libs/keypair"
       }
     },
     "update-version": {
