--- a/libs/keypair/project.json
+++ b/libs/keypair/project.json
@@ -4,14 +4,14 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": ["nx run keypair:update-version", "nx run keypair:build-lib"],
         "outputPath": "dist/libs/keypair"
       }
     },
     "update-version": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "yarn update-version keypair"
       }
