--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -4,14 +4,14 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": ["nx run sdk:update-version", "nx run sdk:build-lib"],
         "outputPath": "dist/libs/sdk"
       }
     },
     "update-version": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "yarn update-version sdk"
       }
