--- a/libs/solana/project.json
+++ b/libs/solana/project.json
@@ -4,14 +4,14 @@
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": ["nx run solana:update-version", "nx run solana:build-lib"],
         "outputPath": "dist/libs/solana"
       }
     },
     "update-version": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "yarn update-version solana"
       }
