--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6.4.1",
     "redirect-ssl": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
@@ -137,20 +137,20 @@
     "@graphql-codegen/typescript-urql": "^3.7.0",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.0.11",
-    "@nrwl/cli": "14.6.5",
-    "@nrwl/cypress": "14.6.5",
-    "@nrwl/devkit": "14.6.5",
-    "@nrwl/eslint-plugin-nx": "14.6.5",
-    "@nrwl/jest": "14.6.5",
-    "@nrwl/js": "14.6.5",
-    "@nrwl/linter": "14.6.5",
-    "@nrwl/nest": "14.6.5",
-    "@nrwl/node": "14.6.5",
+    "@nrwl/cli": "14.8.0",
+    "@nrwl/cypress": "14.8.0",
+    "@nrwl/devkit": "14.8.0",
+    "@nrwl/eslint-plugin-nx": "14.8.0",
+    "@nrwl/jest": "14.8.0",
+    "@nrwl/js": "14.8.0",
+    "@nrwl/linter": "14.8.0",
+    "@nrwl/nest": "14.8.0",
+    "@nrwl/node": "14.8.0",
     "@nrwl/nx-cloud": "14.6.2",
-    "@nrwl/nx-plugin": "14.6.5",
-    "@nrwl/react": "14.6.5",
-    "@nrwl/web": "14.6.5",
-    "@nrwl/workspace": "14.6.5",
+    "@nrwl/nx-plugin": "14.8.0",
+    "@nrwl/react": "14.8.0",
+    "@nrwl/web": "14.8.0",
+    "@nrwl/workspace": "14.8.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@opentelemetry/api-metrics": "^0.32.0",
     "@swc-node/register": "^1.5.1",
@@ -163,24 +163,25 @@
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
     "@types/jest": "28.1.8",
-    "@types/node": "18.7.16",
-    "@types/react": "18.0.18",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
     "babel-jest": "28.1.3",
     "babel-loader": "8.2.5",
+    "css-loader": "^6.7.1",
     "cypress": "^9.7.0",
     "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.7",
+    "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "fake-indexeddb": "^4.0.0",
     "husky": "^8.0.1",
@@ -188,7 +189,7 @@
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.19",
-    "nx": "14.6.5",
+    "nx": "14.8.0",
     "prettier": "2.7.1",
     "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
@@ -197,7 +198,7 @@
     "ts-jest": "28.0.8",
     "ts-morph": "^16.0.0",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4",
+    "typescript": "4.8.4",
     "webpack": "5.74.0"
   },
   "lint-staged": {
