refactor: replace ed25519-hd-key with micro-ed25519-hdkey

--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -18,7 +18,7 @@
         "assets": ["apps/demo/src/favicon.ico", "apps/demo/src/assets"],
         "styles": ["apps/demo/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "apps/demo/webpack.config.js"
+        "webpackConfig": "@nrwl/react/plugins/webpack"
       },
       "configurations": {
         "production": {
