--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "core-js": "^3.25.1",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
-    "ed25519-hd-key": "^1.3.0",
     "express": "^4.18.1",
     "final-form": "^4.20.7",
     "framer-motion": "^6.3.10",
@@ -99,6 +98,7 @@
     "joi": "^17.6.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
+    "micro-ed25519-hdkey": "^0.1.2",
     "nestjs-otel": "^4.0.1",
     "opentelemetry-node-metrics": "^2.0.0",
     "passport": "^0.6.0",
