feat: add support for Discord login

--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,20 @@ CORS_ORIGINS=http://localhost:4200
 #METRICS_ENDPOINT_ENABLED=true
 #METRICS_PORT=9001
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
+# Get a Discord oAuth client ID and secret from
+# https://discord.com/developers/applications
+# set the callback URL to <your API_URL>/auth/discord/callback
+# then set them here and enable it.
+#DISCORD_CLIENT_ID=x
+#DISCORD_CLIENT_SECRET=x
+#DISCORD_ENABLED=true
 # Get a GitHub oAuth client ID and secret from
 # https://github.com/settings/developers or  https://github.com/organizations/<your-org>/settings/applications
 # set the callback URL to <your API_URL>/auth/github/callback
 # then set them here and enable it.
 #GITHUB_CLIENT_ID=x
 #GITHUB_CLIENT_SECRET=x
-#GITHUB_ENABLED=false
+#GITHUB_ENABLED=true
 JWT_SECRET="KineticJwtSecret!"
 HOST=127.0.0.1
 PORT=3000
