feat: Add support for Google login

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,13 @@ DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 #GITHUB_CLIENT_ID=x
 #GITHUB_CLIENT_SECRET=x
 #GITHUB_ENABLED=true
+# Get a Google oAuth client ID and secret from
+# https://developers.google.com/identity/sign-in/web/sign-in
+# set the callback URL to <your API_URL>/auth/google/callback
+# then set them here and enable it.
+#GOOGLE_CLIENT_ID=x
+#GOOGLE_CLIENT_SECRET=x
+#GOOGLE_ENABLED=false
 JWT_SECRET="KineticJwtSecret!"
 HOST=127.0.0.1
 PORT=3000
