--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
