refactor: replace bignumber.js with big.js

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "apollo-server-express": "^3.10.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
-    "bignumber": "^1.1.0",
+    "big.js": "^6.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "color": "^4.2.3",
@@ -160,6 +160,7 @@
     "@swc/helpers": "^0.4.11",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/big.js": "^6.1.6",
     "@types/bs58": "^4.0.1",
     "@types/color": "^3.0.3",
     "@types/create-hmac": "^1.1.0",
