Feedback from partners

--- a/.env.example
+++ b/.env.example
@@ -45,7 +45,9 @@ DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 #GOOGLE_CLIENT_SECRET=x
 #GOOGLE_ENABLED=false
 JWT_SECRET="KineticJwtSecret!"
+# 127.0.0.1 for localhost, 0.0.0.0 when deploying to e.g. Heroku
 HOST=127.0.0.1
+# Set port when running locally
 PORT=3000
 # Configure the logger https://ogma.jaymcdoniel.dev/
 #LOG_COLOR=true
