--- a/libs/sdk/project.json
+++ b/libs/sdk/project.json
@@ -37,7 +37,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/sdk"],
+      "outputs": ["{workspaceRoot}/coverage/libs/sdk"],
       "options": {
         "jestConfig": "libs/sdk/jest.config.ts",
         "passWithNoTests": true
