--- a/libs/api/account/data-access/project.json
+++ b/libs/api/account/data-access/project.json
@@ -12,7 +12,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/account/data-access"],
+      "outputs": ["{workspaceRoot}/coverage/libs/api/account/data-access"],
       "options": {
         "jestConfig": "libs/api/account/data-access/jest.config.ts",
         "passWithNoTests": true
