--- a/libs/api/airdrop/util/project.json
+++ b/libs/api/airdrop/util/project.json
@@ -12,7 +12,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/airdrop/util"],
+      "outputs": ["{workspaceRoot}/coverage/libs/api/airdrop/util"],
       "options": {
         "jestConfig": "libs/api/airdrop/util/jest.config.ts",
         "passWithNoTests": true
