--- a/libs/demo/server/ui/project.json
+++ b/libs/demo/server/ui/project.json
@@ -13,7 +13,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/demo/server/ui"],
+      "outputs": ["{workspaceRoot}/coverage/libs/demo/server/ui"],
       "options": {
         "jestConfig": "libs/demo/server/ui/jest.config.ts",
         "passWithNoTests": true
