chore: update deps

--- a/apps/admin-e2e/project.json
+++ b/apps/admin-e2e/project.json
@@ -6,10 +6,11 @@
     "e2e": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
-        "cypressConfig": "apps/admin-e2e/cypress.json",
+        "cypressConfig": "apps/admin-e2e/cypress.config.ts",
         "devServerTarget": "admin:serve",
         "key": "9d80baaf-fd61-400f-8051-6e14db44040d",
-        "record": true
+        "record": true,
+        "testingType": "e2e"
       },
       "configurations": {
         "production": {
