--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ AUTH_PASSWORD_ENABLED=true
 # The password is optional, when left blank the user can only login with an external provider.
 # The role is optional and can be one of: Admin and User (default).
 # The email is optional and can be used to link an account to external providers.
-# The avatarUrl is optional and can be used to provison an avatar for the user
+# The avatarUrl is optional and can be used to provision an avatar for the user
 AUTH_USERS="alice|Kinetic@alice1|Admin|alice@email.com|http://avatars.dicebear.com/api/open-peeps/aliceal.svg,bob||User|bob@gmail.com"
 # Provision more apps by providing the byte array of the fee payer, name and optionally a logo URL.
 APP_1_FEE_PAYER_BYTE_ARRAY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
@@ -18,7 +18,10 @@ APP_1_NAME="App 1"
 #APP_1_LOGO_URL=""
 COOKIE_DOMAINS="localhost,local.kinetic.host,pages.dev"
 #COOKIE_NAME="__session"
-CORS_ORIGINS=http://localhost:4200
+# You can bypass CORS checks by setting this to true.
+CORS_BYPASS=true
+# If you want to configure CORS, define a comma-separated list of urls here.
+#CORS_ORIGINS=http://localhost:4200
 #METRICS_ENABLED=true
 #METRICS_ENDPOINT_ENABLED=true
 #METRICS_PORT=9001
@@ -45,10 +48,12 @@ DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
 #GOOGLE_CLIENT_SECRET=x
 #GOOGLE_ENABLED=false
 JWT_SECRET="KineticJwtSecret!"
-# 127.0.0.1 for localhost, 0.0.0.0 when deploying to e.g. Heroku
+# Configure the host where the API listens on.
+# Use 127.0.0.1 if you only want to allow connections from localhost.
+# Use 0.0.0.0 (default) when deploying to e.g. Heroku, Render or run in a Docker container.
 HOST=127.0.0.1
-# Set port when running locally
-PORT=3000
+# Configure the port where the API listens on. 3000 is the default.
+#PORT=3000
 # Configure the logger https://ogma.jaymcdoniel.dev/
 #LOG_COLOR=true
 #LOG_JSON=false
@@ -60,8 +65,8 @@ SOLANA_LOCAL_ENABLED=true
 SOLANA_LOCAL_MINT_KIN_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 #SOLANA_LOCAL_RPC_ENDPOINT=http://localhost:8899
 # SolanaDevnet
-SOLANA_DEVNET_ENABLED=true
-#SOLANA_DEVNET_RPC_ENDPOINT=http://localhost:8899
+#SOLANA_DEVNET_ENABLED=true
+#SOLANA_DEVNET_RPC_ENDPOINT=devnet
 #SOLANA_DEVNET_MINT_KIN=*KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX,5,Kin
 #SOLANA_DEVNET_MINT_KIN_AIRDROP_AMOUNT=1000
 #SOLANA_DEVNET_MINT_KIN_AIRDROP_MAX=50000
