refactor: rename AdminConfig -> WebConfig and ADMIN_URL -> WEB_URL

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-# The URL of the Admin UI, used to redirect to the Admin UI after login.
-ADMIN_URL=http://localhost:4200
 # The URL of the API server
 API_URL=http://localhost:3000/api
 # Enable or disable authentication with username and password.
@@ -74,3 +72,5 @@ SOLANA_DEVNET_MINT_KIN_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,17
 # SolanaMainnet
 #SOLANA_MAINNET_RPC_ENDPOINT=mainnet
 SOLANA_MAINNET_ENABLED=false
+# The URL of the Web UI, used to redirect to the Web UI after login.
+WEB_URL=http://localhost:4200
