--- a/.github/workflows/test-sdk-e2e.yml
+++ b/.github/workflows/test-sdk-e2e.yml
@@ -8,7 +8,6 @@ on:
       - main
 
 env:
-  ADMIN_URL: 'http://localhost:3000'
   API_URL: 'http://localhost:3000'
   APP_1_FEE_PAYER_BYTE_ARRAY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   APP_1_NAME: 'App 1'
@@ -26,6 +25,7 @@ env:
   SOLANA_LOCAL_MINT_USDC: '*USDzo281m7rjzeZyxevkzL1vr5Cibb9ek3ynyAjXjUM,2,USDC'
   SOLANA_LOCAL_MINT_USDC_AIRDROP_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   SOLANA_LOCAL_RPC_ENDPOINT: 'http://localhost:8899'
+  WEB_URL: 'http://localhost:3000'
 
 jobs:
   main:
